<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="OBJECT_STATISTICS" Id="{26ff786d-53c1-4572-925f-82bfc9b27710}">
    <Declaration><![CDATA[TYPE OBJECT_STATISTICS :
STRUCT
	TypeName : STRING(255);
	InstanceCount : LINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>