<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="ObjectStatistics" Id="{e3d614f6-2b2e-422b-b19c-8075e74d476b}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'no_explicit_call' := 'Direct call is not allowed'} 
PROGRAM ObjectStatistics
VAR CONSTANT
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.Access' := '1'}	
	OBJECT_STATISTICS_BUFFER_SIZE : DINT := 1000;
END_VAR
VAR_OUTPUT
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.Access' := '1'}	
	CreateObjectCounter : DWORD; // Increments each time when object created
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.Access' := '1'}	
	DeleteObjectCounter : DWORD; // Decrements each time when object created
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.Access' := '1'}	
	ObjectCount : LINT; // Count of existing objecs
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.Access' := '1'}	
	ObjectStatistics : ARRAY [0..OBJECT_STATISTICS_BUFFER_SIZE - 1] OF OBJECT_STATISTICS;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="AddObject" Id="{7c723b8c-9dee-4567-bcee-711cc35204f0}">
      <Declaration><![CDATA[METHOD INTERNAL AddObject : BOOL
VAR_IN_OUT CONSTANT
	object : Object;
END_VAR
VAR
	i : DINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF CreateObjectCounter < 4294967295 THEN
	CreateObjectCounter := CreateObjectCounter + 1;
ELSE
	CreateObjectCounter := 0;
END_IF

ObjectCount := ObjectCount + 1;

IF object.ClassName = '' THEN
	RETURN;	
END_IF

FOR i := 0 TO OBJECT_STATISTICS_BUFFER_SIZE - 1 DO
	IF ObjectStatistics[i].TypeName = object.ClassName THEN		
		ObjectStatistics[i].InstanceCount := ObjectStatistics[i].InstanceCount + 1;		
		RETURN;
	ELSIF ObjectStatistics[i].TypeName = '' THEN	
		ObjectStatistics[i].TypeName := object.ClassName;
		ObjectStatistics[i].InstanceCount := 1;		
		RETURN;
	END_IF
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="RemoveObject" Id="{d9329373-0a12-49f5-b157-360bf35bcd1a}">
      <Declaration><![CDATA[METHOD INTERNAL RemoveObject
VAR_IN_OUT CONSTANT
	object : Object;
END_VAR
VAR
	i : DINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF DeleteObjectCounter < 4294967295 THEN
	DeleteObjectCounter := DeleteObjectCounter + 1;
ELSE
	DeleteObjectCounter := 0;
END_IF

ObjectCount := ObjectCount - 1;

IF object.ClassName = '' THEN
	RETURN;	
END_IF

FOR i := 0 TO OBJECT_STATISTICS_BUFFER_SIZE - 1 DO
	IF ObjectStatistics[i].TypeName = object.ClassName THEN				
		ObjectStatistics[i].InstanceCount := ObjectStatistics[i].InstanceCount - 1;
						
		RETURN;
	END_IF 
END_FOR]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>